--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
     "name": "nativescript-http-formdata",
     "version": "1.1.0",
-    "description": "Your awesome NativeScript plugin.",
+    "description": "A NativeScript plugin to post/upload file as multipart/form-data to server.",
     "main": "TNSHttpFormData",
     "typings": "index.d.ts",
     "nativescript": {
