--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ seed-tests/seed-copy/**/*.*
 seed-tests/seed-copy-new-git-repo/**/*.*
 !demo-ng/karma.conf.js
 !demo-ng/app/tests/*.js
+!demo-ng/app/helpers.js
 demo-ng/*.d.ts
 !demo-ng/references.d.ts
 demo-ng/lib
