fixed livesync changes

--- a/src/package.json
+++ b/src/package.json
@@ -11,20 +11,19 @@
         }
     },
     "scripts": {
-        "tsc": "tsc -skipLibCheck",
-        "build": "npm i && tsc && npm run build.native",
+        "tsc": "tsc",
+        "build": "npm run tsc && npm run build.native",
         "build.native": "node scripts/build-native.js",
-        "postclone": "npm i && node scripts/postclone.js && cd ../demo-ng && npm i && cd ../src && npm run plugin.link",
-        "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo-ng && tns build android && tns test android --justlaunch",
-        "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo-ng && tns build ios && tns test ios --justlaunch",
+        "postclone": "npm i && node scripts/postclone.js && cd ../demo-ng && npm i && npx rimraf -- package-lock.json && cd ../src",
+        "test.android": "npm run tsc && cd ../demo-ng && tns build android && tns test android --justlaunch",
+        "test.ios": "npm run tsc && cd ../demo-ng && tns build ios && tns test ios --justlaunch",
         "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
-        "plugin.link": "npm link && cd ../demo-ng && npm link nativescript-http-formdata && cd ../src",
         "plugin.tscwatch": "npm run tsc -- -w",
-        "demo.ios": "npm i && npm run tsc && cd ../demo-ng && tns run ios --syncAllFiles",
-        "demo.android": "npm i && npm run tsc && npm run plugin.link && cd ../demo-ng && tns run android --syncAllFiles",
-        "demo.reset": "cd ../demo-ng && rimraf platforms",
-        "plugin.prepare": "npm run build && cd ../demo-ng && tns plugin remove nativescript-http-formdata && tns plugin add ../src",
-        "clean": "cd ../demo-ng && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
+        "demo.ios": "npm run tsc && cd ../demo-ng && tns run ios --syncAllFiles",
+        "demo.android": "npm run tsc && cd ../demo-ng && tns run android --syncAllFiles",
+        "demo.reset": "cd ../demo-ng && npx rimraf -- hooks node_modules platforms package-lock.json",
+        "plugin.prepare": "npm run build && cd ../demo-ng && tns plugin remove nativescript-plugin-signalr && tns plugin add ../src",
+        "clean": "npm run demo.reset && npx rimraf -- node_modules package-lock.json && npm i",
         "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'",
         "prepack": "npm run build.native"
     },
