--- a/demo-ng/package.json
+++ b/demo-ng/package.json
@@ -6,7 +6,7 @@
   "nativescript": {
     "id": "org.nativescript.demong",
     "tns-android": {
-      "version": "4.0.1"
+      "version": "4.2.0"
     }
   },
   "dependencies": {
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~5.2.0",
     "@angular/router": "~5.2.0",
     "nativescript-angular": "~5.3.0",
-    "nativescript-http-formdata": "../src",
+    "nativescript-http-formdata": "file:../src",
     "nativescript-imagepicker": "^6.0.1",
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.8",
@@ -50,5 +50,9 @@
     "webpack": "~3.10.0",
     "webpack-bundle-analyzer": "^2.9.1",
     "webpack-sources": "~1.1.0"
+  },
+  "scripts": {
+    "build.plugin": "cd ../src && npm run build",
+    "ci.tslint": "npm i && tslint --config '../tslint.json' 'app/**/*.ts' --exclude '**/node_modules/**'"
   }
 }
