--- a/src/package.json
+++ b/src/package.json
@@ -43,13 +43,13 @@
     "homepage": "https://github.com/dotnetdreamer/nativescript-http-formdata",
     "readmeFilename": "README.md",
     "devDependencies": {
-        "tns-core-modules": "^4.0.0",
-        "tns-platform-declarations": "^4.0.0",
-        "typescript": "~2.3.0",
         "prompt": "^1.0.0",
         "rimraf": "^2.5.0",
+        "semver": "^5.5.0",
+        "tns-core-modules": "^4.2.1",
+        "tns-platform-declarations": "^4.0.0",
         "tslint": "^5.0.0",
-        "semver": "^5.5.0"
+        "typescript": "~2.7.2"
     },
     "dependencies": {},
     "bootstrapper": "nativescript-plugin-seed"
