--- a/demo-ng/package.json
+++ b/demo-ng/package.json
@@ -3,6 +3,9 @@
         "id": "org.nativescript.demong",
         "tns-ios": {
             "version": "5.1.0"
+        },
+        "tns-android": {
+            "version": "5.1.0"
         }
     },
     "description": "NativeScript Application",
