--- a/demo-angular/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/demo-angular/App_Resources/Android/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
-		android:theme="@style/AppTheme">
+		android:theme="@style/AppTheme"
+		android:networkSecurityConfig="@xml/network_security_config">
 
 		<activity
 			android:name="com.tns.NativeScriptActivity"
