--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -1,12 +1,20 @@
 /* Include.gradle configuration: http://docs.nativescript.org/plugins/plugins#includegradle-specification */
 
-android {
-	mavenCentral()
+// android {
+// 	mavenCentral()
+// }
+
+
+repositories {
+    mavenCentral()
+    maven {
+      url 'https://maven.google.com/'    
+    }
 }
 
 dependencies {
     // Describe plugin native Android dependencies like
 	// implementation "groupName:pluginName:ver" 
     // EXAMPLE: implementation "com.facebook.fresco:fresco:0.9.0+"
-    compile "com.squareup.okhttp3:okhttp:3.10.0"
+    compile "com.squareup.okhttp3:okhttp:4.0.1"
 }
