--- a/.gitignore
+++ b/.gitignore
@@ -12,15 +12,15 @@ src/*.d.ts
 !seed-tests/*.js
 seed-tests/seed-copy/**/*.*
 seed-tests/seed-copy-new-git-repo/**/*.*
-!demo/karma.conf.js
-!demo/app/tests/*.js
-demo/*.d.ts
-!demo/references.d.ts
-demo/lib
-demo/platforms
+!demo-angular/karma.conf.js
+!demo-angular/app/tests/*.js
+demo-angular/*.d.ts
+!demo-angular/references.d.ts
+demo-angular/lib
+demo-angular/platforms
 node_modules
 publish/src
 publish/package
-demo/report/report.html
-demo/report/stats.json
+demo-angular/report/report.html
+demo-angular/report/stats.json
 !demo-vue/app/app.js
