--- a/src/package.json
+++ b/src/package.json
@@ -6,8 +6,8 @@
 	"typings": "index.d.ts",
 	"nativescript": {
 		"platforms": {
-			"android": "6.2.0",
-			"ios": "6.2.0"
+			"android": "6.3.0",
+			"ios": "6.3.0"
 		}
 	},
 	"repository": {
@@ -46,9 +46,9 @@
 	"homepage": "https://github.com/dotnetdreamer/nativescript-http-formdata",
 	"readmeFilename": "README.md",
 	"devDependencies": {
-		"tns-core-modules": "^6.0.0",
-		"tns-platform-declarations": "^6.0.0",
-		"typescript": "~3.4.5",
+		"tns-core-modules": "~6.3.0",
+		"tns-platform-declarations": "^6.3.2",
+		"typescript": "~3.5.3",
 		"prompt": "^1.0.0",
 		"rimraf": "^2.6.3",
 		"tslint": "^5.12.1",
