--- a/demo-angular/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/demo-angular/App_Resources/Android/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme"
+		android:requestLegacyExternalStorage="true" 
 		android:networkSecurityConfig="@xml/network_security_config">
 
 		<activity
