--- a/demo-angular/package.json
+++ b/demo-angular/package.json
@@ -1,40 +1,44 @@
 {
-  "nativescript": {
-    "id": "org.nativescript.demoangular",
-    "tns-ios": {
-      "version": "6.3.0"
-    },
-    "tns-android": {
-      "version": "6.3.0"
-    }
-  },
   "description": "NativeScript Application",
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "dependencies": {
+    "@angular/animations": "~11.2.7",
+    "@angular/common": "~11.2.7",
+    "@angular/compiler": "~11.2.7",
+    "@angular/core": "~11.2.7",
+    "@angular/forms": "~11.2.7",
+    "@angular/platform-browser": "~11.2.7",
+    "@angular/platform-browser-dynamic": "~11.2.7",
+    "@angular/router": "~11.2.7",
+    "@nativescript/angular": "~11.8.0",
+    "@nativescript/core": "~8.0.0",
+    "@nativescript/imagepicker": "^1.0.3",
+    "@nativescript/theme": "^3.0.1",
     "nativescript-http-formdata": "file:../src",
-    "@angular/animations": "~8.2.0",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/forms": "~8.2.0",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
-    "nativescript-angular": "^8.20.4",
-    "nativescript-imagepicker": "^7.1.0",
-    "nativescript-theme-core": "~1.0.6",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
-    "tns-core-modules": "~6.3.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.11.1"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~8.2.0",
-    "@ngtools/webpack": "~8.2.0",
-    "nativescript-dev-webpack": "~1.4.0",
-    "typescript": "~3.5.3"
+    "@angular/compiler-cli": "~11.2.7",
+    "@nativescript/android": "8.0.0",
+    "@nativescript/types": "8.0.0",
+    "@nativescript/webpack": "~5.0.0-beta.0",
+    "@ngtools/webpack": "~11.2.6",
+    "typescript": "~4.0.0"
   },
   "gitHead": "f28dbc60d74dd2cef4b645afd8fdd63bbb12c73e",
-  "readme": "NativeScript Application"
+  "readme": "NativeScript Application",
+  "main": "./src/main.ts",
+  "files": [
+    "App_Resources",
+    "hooks",
+    "src",
+    "tools",
+    "!tools/assets",
+    ".editorconfig",
+    "references.d.ts",
+    "tsconfig.json"
+  ]
 }
