--- a/demo-angular/tsconfig.json
+++ b/demo-angular/tsconfig.json
@@ -1,33 +1,22 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es5",
-		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true,
-		"noEmitHelpers": true,
-		"noEmitOnError": true,
-		"lib": [
-			"es6",
-			"dom",
-			"es2015.iterable"
-		],
-		"baseUrl": ".",
-		"paths": {
-			"~/*": [
-				"src/*"
-			],
-			"*": [
-				"./node_modules/*"
-			]
-		}
+	  "module": "esnext",
+	  "target": "es2017",
+	  "moduleResolution": "node",
+	  "experimentalDecorators": true,
+	  "emitDecoratorMetadata": true,
+	  "noEmitHelpers": true,
+	  "noEmitOnError": true,
+	  "skipLibCheck": true,
+	  "lib": ["es2017", "dom"],
+	  "baseUrl": ".",
+	  "paths": {
+		"~/*": ["src/*"],
+		"@/*": ["src/*"]
+	  }
 	},
-	"exclude": [
-		"node_modules",
-		"platforms",
-		"../src/node_modules"
-	],
-	"include": [
-		"../src",
-		"**/*"
-	]
-}
+	"include": ["src/tests/**/*.ts", "src/**/*.ios.ts", "src/**/*.android.ts","../src/**/*.ios.ts", "../src/**/*.android.ts"],
+	"files": ["./src/main.ts", "./references.d.ts"],
+	"exclude": ["node_modules", "platforms", "e2e"]
+  }
+  
