--- a/src/package.json
+++ b/src/package.json
@@ -16,12 +16,11 @@
 	},
 	"scripts": {
 		"tsc": "npm i && tsc",
-		"build": "npm run tsc && npm run build.native",
-		"build.native": "node scripts/build-native.js",
+		"build": "npm i && npx ts-patch install && tsc",
 		"postclone": "npm i && node scripts/postclone.js",
 		"tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
 		"ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**' --exclude '**/platforms/**'",
-		"prepack": "npm run build.native",
+		"prepack": "npm run build",
 		"demo.ios": "npm run tsc && cd ../demo-angular && tns run ios --no-hmr",
 		"demo.android": "npm run tsc && cd ../demo-angular && tns run android --no-hmr",
 		"demo.reset": "cd ../demo-angular && npx rimraf -- hooks node_modules platforms package-lock.json",
@@ -46,13 +45,12 @@
 	"homepage": "https://github.com/dotnetdreamer/nativescript-http-formdata",
 	"readmeFilename": "README.md",
 	"devDependencies": {
-		"@nativescript/core": "8.0.0",
-		"@nativescript/types": "8.0.0",
-		"prompt": "^1.1.0",
-		"rimraf": "^3.0.2",
-		"semver": "^7.3.5",
-		"tslint": "^5.12.1",
-		"typescript": "~4.0.0"
+		"@nativescript/core": "~8.2.0",
+        "@nativescript/types": "~8.2.0",
+        "@nativescript/webpack": "~5.0.0",
+        "rimraf": "^3.0.2",
+        "ts-patch": "~1.4.5",
+        "typescript": "~4.3.5"
 	},
 	"bootstrapper": "nativescript-plugin-seed"
 }
