--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -1,10 +1,3 @@
-/* Include.gradle configuration: http://docs.nativescript.org/plugins/plugins#includegradle-specification */
-
-// android {
-// 	mavenCentral()
-// }
-
-
 repositories {
     mavenCentral()
     maven {
@@ -16,5 +9,5 @@ dependencies {
     // Describe plugin native Android dependencies like
 	// implementation "groupName:pluginName:ver" 
     // EXAMPLE: implementation "com.facebook.fresco:fresco:0.9.0+"
-    compile "com.squareup.okhttp3:okhttp:4.3.1"
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
 }
