--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,14 +1,15 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
+        "target": "ES2017",
+        "module": "esnext",
+        "moduleResolution": "node",
         "declaration": true,
         "removeComments": true,
         "noLib": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "skipLibCheck": true,
-        "lib": ["es6", "dom"],
+        "lib": ["es2017", "dom"],
         "sourceMap": true,
         "pretty": true,
         "allowUnreachableCode": false,
@@ -18,12 +19,17 @@
         "noImplicitAny": false,
         "noImplicitReturns": true,
         "noImplicitUseStrict": false,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "baseUrl": ".",
+    		"plugins": [
+    			{
+    				"transform": "@nativescript/webpack/dist/transformers/NativeClass",
+    				"type": "raw"
+    			}
+    		]
     },
     "exclude": [
         "node_modules"
     ],
-    "include": ["*.ios.ts", "*.android.ts"],
-    "files": ["./references.d.ts"],
     "compileOnSave": false
 }
