--- a/demo-angular/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/demo-angular/App_Resources/Android/src/main/AndroidManifest.xml
@@ -23,11 +23,17 @@
 		android:requestLegacyExternalStorage="true" 
 		android:networkSecurityConfig="@xml/network_security_config">
 
+		<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"/>
+        </provider>
+
 		<activity
 			android:name="com.tns.NativeScriptActivity"
 			android:label="@string/title_activity_kimera"
 			android:configChanges="keyboard|keyboardHidden|orientation|screenSize|smallestScreenSize|screenLayout|locale|uiMode"
-			android:theme="@style/LaunchScreenTheme">
+			android:theme="@style/LaunchScreenTheme"
+			android:launchMode="singleTask"
+			android:exported="true">
 
 			<meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme" />
 
