--- a/demo-angular/package.json
+++ b/demo-angular/package.json
@@ -3,30 +3,31 @@
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "dependencies": {
-    "@angular/animations": "~11.2.7",
-    "@angular/common": "~11.2.7",
-    "@angular/compiler": "~11.2.7",
-    "@angular/core": "~11.2.7",
-    "@angular/forms": "~11.2.7",
-    "@angular/platform-browser": "~11.2.7",
-    "@angular/platform-browser-dynamic": "~11.2.7",
-    "@angular/router": "~11.2.7",
-    "@nativescript/angular": "~11.8.0",
-    "@nativescript/core": "~8.0.0",
+    "@angular/animations": "~13.2.0",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/forms": "~13.2.0",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/router": "~13.2.0",
+    "@nativescript/angular": "^13.0.0",
+    "@nativescript/core": "~8.2.0",
     "@nativescript/imagepicker": "^1.0.3",
     "@nativescript/theme": "^3.0.1",
     "nativescript-http-formdata": "file:../src",
-    "reflect-metadata": "~0.1.12",
-    "rxjs": "^6.4.0",
+    "rxjs": "~7.5.0",
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~11.2.7",
-    "@nativescript/android": "8.0.0",
-    "@nativescript/types": "8.0.0",
+    "@angular-devkit/build-angular": "~13.2.0",
+    "@angular/compiler-cli": "~13.2.0",
+    "@nativescript/android": "~8.2.0",
+    "@nativescript/ios": "8.2.4-alpha.1",
+    "@nativescript/types": "~8.2.0",
     "@nativescript/webpack": "~5.0.0-beta.0",
-    "@ngtools/webpack": "~11.2.6",
-    "typescript": "~4.0.0"
+    "@ngtools/webpack": "~13.2.0",
+    "typescript": "~4.5.5"
   },
   "gitHead": "f28dbc60d74dd2cef4b645afd8fdd63bbb12c73e",
   "readme": "NativeScript Application",
